examples/test/testpolicy11969.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11969
  namespace: namespace272
spec:
  podSelector:
    matchLabels:
      key10: value40
      key41: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value11
          key24: value16
          key17: value37
      podSelector:
        matchLabels:
          key12: value18
          key38: value40
          key39: value1
